# IzInjector

./: .gitignore  CMakeLists.txt  CMakePresets.json  IzInjector.c  IzInjector.h  IzInjector.vcxproj  IzInjector.vcxproj.filters  README.md  Utility.c  Utility.h  appveyor.yml  appvoyer.yml  conanfile.txt  main.c  utility.c  utility.h  vcpkg-configuration.json  vcpkg.json
.github/: FUNDING.yml
.github/workflows/: application.yml  build.yml
.vcpkg/: windows.cmake  x86-windows.cmake
cmake/: IzInjectorConfig.cmake.in
fixture/: CMakeLists.txt  dllmain.c
src/: CMakeLists.txt  IzInjector.c  IzInjector.h  Utility.h  Utils.c  Utils.h  main.c
src/__test__/: CMakeLists.txt  IzInjector.test.c  main.test.c
src/tests/: IzInjector.test.c  main.test.c
